--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -18,8 +18,8 @@ jobs:
           --build-arg HADOOP_VERSION=${{matrix.hadoop_version}}
           --build-arg JAVA_VERSION=${{matrix.java_version}}
           src/base
-      - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop${{matrix.hadoop_version}}-java${{matrix.java_version}}
-      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop${{matrix.hadoop_version}}-java${{matrix.java_version}}
+      - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
+      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
 
   build-spark-image:
     runs-on: ubuntu-latest
