--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -10,12 +10,14 @@ jobs:
         repository: [spark]
         java_version: [8]
         hadoop_version: [3.2.1, 3.1.3, 2.9.2, 2.8.5, 2.7.7]
+        polynote_version: [0.2.11]
     steps:
       - uses: actions/checkout@v1
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - run: docker build -q
           -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
           --build-arg HADOOP_VERSION=${{matrix.hadoop_version}}
+          --build-arg POLYNOTE_VERSION=${{matrix.polynote_version}}
           --build-arg JAVA_VERSION=${{matrix.java_version}}
           src/base
       - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
