apache livy spark rest interface integration started

--- a/src/base/Dockerfile
+++ b/src/base/Dockerfile
@@ -5,9 +5,14 @@ FROM mpolatcan/hadoop:${HADOOP_VERSION}-java${JAVA_VERSION}
 
 MAINTAINER Mutlu Polatcan <mutlupolatcan@gmail.com>
 
-ENV SPARK_HOME "${HDUSER_HOME}/spark"
+ARG LIVY_VERSION=""
+ARG LIVY_DOWNLOAD_LINK="https://www-eu.apache.org/dist/incubator/livy/${LIVY_VERSION}-incubating/apache-livy-${LIVY_VERSION}-incubating-bin.zip"
+
+ENV SPARK_HOME="${HDUSER_HOME}/spark" \
+    LIVY_HOME="${HDUSER_HOME}/livy"
 ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
-    PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin \
+    LIVY_CONF_DIR="${LIVY_HOME}/conf" \
+    PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin \
 	SPARK_DEFAULT_PARALLELISM="NULL" \
 	SPARK_DRIVER_CORES="1" \
 	SPARK_DRIVER_MAXRESULTSIZE="1g" \
@@ -269,11 +274,56 @@ ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
 	SPARK_YARN_ROLLEDLOG_INCLUDEPATTERN="NULL" \
 	SPARK_YARN_ROLLEDLOG_EXCLUDEPATTERN="NULL" \
 	SPARK_YARN_BLACKLIST_EXECUTOR_LAUNCH_BLACKLISTING_ENABLED="NULL" \
-	SPARK_YARN_METRICS_NAMESPACE="NULL"
+	SPARK_YARN_METRICS_NAMESPACE="NULL" \
+	LIVY_KEYSTORE="NULL" \
+	LIVY_KEYSTORE_PASSWORD="NULL" \
+	LIVY_KEY_PASSWORD="NULL" \
+	LIVY_HADOOP_SECURITY_CREDENTIAL_PROVIDER_PATH="NULL" \
+	LIVY_SERVER_HOST="0.0.0.0" \
+	LIVY_SERVER_PORT="8998" \
+	LIVY_SERVER_REQUEST_HEADER_SIZE="131072" \
+	LIVY_SERVER_RESPONSE_HEADER_SIZE="131072" \
+	LIVY_SERVER_SESSION_TIMEOUT_CHECK="true" \
+	LIVY_SERVER_SESSION_TIMEOUT="1h" \
+	LIVY_SERVER_SESSION_STATE_RETAIN_SEC="600s" \
+	LIVY_SERVER_CSRF_PROTECTION_ENABLED="NULL" \
+	LIVY_SERVER_RECOVERY_MODE="off" \
+	LIVY_SERVER_RECOVERY_STATE_STORE="NULL" \
+	LIVY_SERVER_RECOVERY_STATE_STORE_URL="NULL" \
+	LIVY_SERVER_YARN_APP_LOOKUP_TIMEOUT="120s" \
+	LIVY_SERVER_YARN_APP_LEAKAGE_CHECK_TIMEOUT="600s" \
+	LIVY_SERVER_YARN_APP_LEAKAGE_CHECK_INTERVAL="60s" \
+	LIVY_SERVER_YARN_POLL_INTERVAL="5s" \
+	LIVY_SERVER_REQUEST_LOG_RETAIN_DAYS="5" \
+	LIVY_SERVER_ACCESS_CONTROL_ENABLED="false" \
+	LIVY_SERVER_ACCESS_CONTROL_ALLOWED_USERS="*" \
+	LIVY_SERVER_ACCESS_CONTROL_MODIFY_USERS="NULL" \
+	LIVY_SERVER_ACCESS_CONTROL_VIEW_USERS="NULL" \
+	LIVY_SERVER_AUTH_TYPE="kerberos" \
+	LIVY_SERVER_AUTH_KERBEROS_PRINCIPAL="NULL" \
+	LIVY_SERVER_AUTH_KERBEROS_KEYTAB="NULL" \
+	LIVY_SERVER_AUTH_KERBEROS_NAME_RULES="DEFAULT" \
+	LIVY_UI_BASEPATH="" \
+	LIVY_UI_ENABLED="true" \
+	LIVY_SPARK_MASTER="local" \
+	LIVY_SPARK_DEPLOY_MODE="NULL" \
+	LIVY_IMPERSONATION_ENABLED="true" \
+	LIVY_CACHE_LOG_SIZE="200" \
+	LIVY_RSC_JARS="NULL" \
+	LIVY_REPL_JARS="NULL" \
+	LIVY_REPL_ENABLE_HIVE_CONTEXT="NULL" \
+	LIVY_PYSPARK_ARCHIVES="NULL" \
+	LIVY_SPARKR_PACKAGE="NULL" \
+	LIVY_FILE_LOCAL_DIR_WHITELIST="NULL"
 
 ADD entrypoint.sh ${HDUSER_HOME}/spark_entrypoint.sh
 ADD config_loader.sh ${HDUSER_HOME}/spark_config_loader.sh
 
 USER root
-RUN mkdir -p ${SPARK_HOME} && \
-    chmod +x ${HDUSER_HOME}/spark_config_loader.sh ${HDUSER_HOME}/spark_entrypoint.sh
+RUN mkdir -p ${SPARK_HOME} ${LIVY_HOME} && \
+    chmod +x ${HDUSER_HOME}/spark_config_loader.sh ${HDUSER_HOME}/spark_entrypoint.sh && \
+    wget ${LIVY_DOWNLOAD_LINK} && \
+    unzip ${LIVY_ZIP_FOLDER_NAME}.tgz && \
+    mv ${HDUSER_HOME}/${LIVY_ZIP_FOLDER_NAME}/* ${LIVY_HOME} && \
+    rm -r ${HDUSER_HOME}/${LIVY_ZIP_FOLDER_NAME} && \
+    chown -R hduser:hadoop ${LIVY_HOME}
