--- a/src/utils/base_setup_generator/config.yaml
+++ b/src/utils/base_setup_generator/config.yaml
@@ -4,26 +4,37 @@ base_dockerfile_template: |
 
   FROM mpolatcan/hadoop:${{HADOOP_VERSION}}-java${{JAVA_VERSION}}
 
-  MAINTAINER Mutlu Polacan <mutlupolatcan@gmail.com>
+  MAINTAINER Mutlu Polatcan <mutlupolatcan@gmail.com>
 
-  ENV SPARK_HOME "${{HDUSER_HOME}}/spark"
+  ARG LIVY_VERSION=""
+  ARG LIVY_DOWNLOAD_LINK="https://www-eu.apache.org/dist/incubator/livy/${{LIVY_VERSION}}-incubating/apache-livy-${{LIVY_VERSION}}-incubating-bin.zip"
+
+  ENV SPARK_HOME="${{HDUSER_HOME}}/spark" \
+      LIVY_HOME="${{HDUSER_HOME}}/livy"
   ENV SPARK_CONF_DIR="${{SPARK_HOME}}/conf" \
-      PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin \
+      LIVY_CONF_DIR="${{LIVY_HOME}}/conf" \
+      PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin \
   {env_vars}
 
   ADD entrypoint.sh ${{HDUSER_HOME}}/spark_entrypoint.sh
   ADD config_loader.sh ${{HDUSER_HOME}}/spark_config_loader.sh
 
   USER root
-  RUN mkdir -p ${{SPARK_HOME}} && \
-      chmod +x ${{HDUSER_HOME}}/spark_config_loader.sh ${{HDUSER_HOME}}/spark_entrypoint.sh
+  RUN mkdir -p ${{SPARK_HOME}} ${{LIVY_HOME}} && \
+      chmod +x ${{HDUSER_HOME}}/spark_config_loader.sh ${{HDUSER_HOME}}/spark_entrypoint.sh && \
+      wget ${{LIVY_DOWNLOAD_LINK}} && \
+      unzip ${{LIVY_ZIP_FOLDER_NAME}}.tgz && \
+      mv ${{HDUSER_HOME}}/${{LIVY_ZIP_FOLDER_NAME}}/* ${{LIVY_HOME}} && \
+      rm -r ${{HDUSER_HOME}}/${{LIVY_ZIP_FOLDER_NAME}} && \
+      chown -R hduser:hadoop ${{LIVY_HOME}}
 
 config_loader_sh_template: |
   #!/usr/bin/env bash
   function load_config() {{
-    if [[ "$2" != "NULL" ]]
-      then
+    if [[ "$2" != "NULL" && "$4" == "spark" ]]; then
         printf "$1\t$2\n" >> "${{SPARK_CONF_DIR}}/$3"
+    elif [[ "$2" != "NULL" && "$4" == "livy" ]]; then
+        printf "$1 = $2\n" >> "${{LIVY_CONF_DIR}}/$3"
     fi
   }}
 
@@ -32,5 +43,9 @@ config_loader_sh_template: |
 config_files:
   - path: spark_configs/spark-defaults.yaml
     filename: spark-defaults.conf
+    config_type: spark
+  - path: spark_configs/livy-defaults.yaml
+    filename: livy.conf
+    config_type: livy
 
 output_dir: ../../base
