kerberos authentication disabled from config

--- a/src/utils/base_setup_generator/spark_configs/livy-defaults.yaml
+++ b/src/utils/base_setup_generator/spark_configs/livy-defaults.yaml
@@ -41,11 +41,11 @@ livy:
       modify-users: "NULL"
       view-users: "NULL"
     auth:
-      type: "kerberos"
+      type: "NULL"
       kerberos:
         principal: "NULL"
         keytab: "NULL"
-        name-rules: "DEFAULT"
+        name-rules: "NULL"
   ui:
     basePath: ""
     enabled: "true"
