--- a/src/base/Dockerfile
+++ b/src/base/Dockerfile
@@ -300,10 +300,10 @@ ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
 	LIVY_SERVER_ACCESS_CONTROL_ALLOWED_USERS="*" \
 	LIVY_SERVER_ACCESS_CONTROL_MODIFY_USERS="NULL" \
 	LIVY_SERVER_ACCESS_CONTROL_VIEW_USERS="NULL" \
-	LIVY_SERVER_AUTH_TYPE="kerberos" \
+	LIVY_SERVER_AUTH_TYPE="NULL" \
 	LIVY_SERVER_AUTH_KERBEROS_PRINCIPAL="NULL" \
 	LIVY_SERVER_AUTH_KERBEROS_KEYTAB="NULL" \
-	LIVY_SERVER_AUTH_KERBEROS_NAME_RULES="DEFAULT" \
+	LIVY_SERVER_AUTH_KERBEROS_NAME_RULES="NULL" \
 	LIVY_UI_BASEPATH="" \
 	LIVY_UI_ENABLED="true" \
 	LIVY_SPARK_MASTER="local" \
@@ -324,7 +324,7 @@ USER root
 RUN mkdir -p ${SPARK_HOME} ${LIVY_HOME} && \
     chmod +x ${HDUSER_HOME}/spark_config_loader.sh ${HDUSER_HOME}/spark_entrypoint.sh && \
     wget ${LIVY_DOWNLOAD_LINK} && \
-    unzip ${LIVY_ZIP_FOLDER_NAME}.zip && \
-    mv ${LIVY_ZIP_FOLDER_NAME}/* ${LIVY_HOME} && \
-    rm -r ${LIVY_ZIP_FOLDER_NAME} ${LIVY_ZIP_FOLDER_NAME}.zip && \
+    unzip ${LIVY_ZIP_FOLDER_NAME}.tgz && \
+    mv ${HDUSER_HOME}/${LIVY_ZIP_FOLDER_NAME}/* ${LIVY_HOME} && \
+    rm -r ${HDUSER_HOME}/${LIVY_ZIP_FOLDER_NAME} && \
     chown -R hduser:hadoop ${LIVY_HOME}
