spark base image entrypoint updated

--- a/src/base/Dockerfile
+++ b/src/base/Dockerfile
@@ -304,10 +304,10 @@ ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
 	LIVY_SERVER_AUTH_KERBEROS_PRINCIPAL="NULL" \
 	LIVY_SERVER_AUTH_KERBEROS_KEYTAB="NULL" \
 	LIVY_SERVER_AUTH_KERBEROS_NAME_RULES="NULL" \
-	LIVY_UI_BASEPATH="" \
+	LIVY_UI_BASEPATH="NULL" \
 	LIVY_UI_ENABLED="true" \
-	LIVY_SPARK_MASTER="local" \
-	LIVY_SPARK_DEPLOY_MODE="NULL" \
+	LIVY_SPARK_MASTER="yarn" \
+	LIVY_SPARK_DEPLOYMODE="client" \
 	LIVY_IMPERSONATION_ENABLED="true" \
 	LIVY_CACHE_LOG_SIZE="200" \
 	LIVY_RSC_JARS="NULL" \
