--- a/src/utils/base_setup_generator/spark_configs/livy-defaults.yaml
+++ b/src/utils/base_setup_generator/spark_configs/livy-defaults.yaml
@@ -47,11 +47,11 @@ livy:
         keytab: "NULL"
         name-rules: "NULL"
   ui:
-    basePath: ""
+    basePath: "NULL"
     enabled: "true"
   spark:
-    master: "local"
-    deploy-mode: "NULL"
+    master: "yarn"
+    deployMode: "client"
   impersonation:
     enabled: "true"
   cache-log:
