--- a/src/base/Dockerfile
+++ b/src/base/Dockerfile
@@ -13,6 +13,7 @@ ENV SPARK_HOME="${HDUSER_HOME}/spark" \
     LIVY_HOME="${HDUSER_HOME}/livy"
 ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
     LIVY_CONF_DIR="${LIVY_HOME}/conf" \
+    SPARK_SERVICES="NULL" \
     PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin \
 	SPARK_DEFAULT_PARALLELISM="NULL" \
 	SPARK_DRIVER_CORES="1" \
