--- a/k8s/deployment/master-slave-cluster/spark_master.yml
+++ b/k8s/deployment/master-slave-cluster/spark_master.yml
@@ -78,7 +78,7 @@ spec:
     - metadata:
         name: spark-master-volume
       spec:
-        storageClassName: gce-pd-hdd
+        storageClassName: do-block-storage
         accessModes:
           - ReadWriteOnce
         resources:
