--- a/k8s/deployment/master-slave-cluster/spark_worker.yml
+++ b/k8s/deployment/master-slave-cluster/spark_worker.yml
@@ -77,7 +77,7 @@ spec:
     - metadata:
         name: spark-worker-volume
       spec:
-        storageClassName: gce-pd-hdd
+        storageClassName: do-block-storage
         accessModes:
           - ReadWriteOnce
         resources:
