--- a/src/utils/base_setup_generator/config.yaml
+++ b/src/utils/base_setup_generator/config.yaml
@@ -14,7 +14,7 @@ base_dockerfile_template: |
       LIVY_HOME="${{HDUSER_HOME}}/livy"
   ENV SPARK_CONF_DIR="${{SPARK_HOME}}/conf" \
       LIVY_CONF_DIR="${{LIVY_HOME}}/conf" \
-      SPARK_SERVICES="NULL" \
+      SPARK_DAEMONS="NULL" \
       PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin \
   {env_vars}
 
