--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -54,6 +54,7 @@ jobs:
         java_version: [8]
         spark_version: [2.4.5, 2.3.4]
         hadoop_version: [3.2.1, 3.1.3, 2.9.2, 2.8.5, 2.7.7]
+        virtualenv_version: [16.7.9]
     needs: build-spark-image
     steps:
       - uses: actions/checkout@v1
@@ -63,6 +64,7 @@ jobs:
           --build-arg SPARK_VERSION=${{matrix.spark_version}}
           --build-arg HADOOP_VERSION=${{matrix.hadoop_version}}
           --build-arg JAVA_VERSION=${{matrix.java_version}}
+          --build-arg VIRTUALENV_VERSION=${{matrix.virtualenv_version}}
           src/pyspark
       - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.spark_version}}-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
       - run: docker rmi ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.spark_version}}-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
