--- a/src/pyspark/Dockerfile
+++ b/src/pyspark/Dockerfile
@@ -1,10 +1,10 @@
 ARG SPARK_VERSION=""
 ARG HADOOP_VERSION=""
 ARG JAVA_VERSION=""
-
 FROM mpolatcan/spark:${SPARK_VERSION}-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
 
 ARG SPARK_VERSION=""
+ARG VIRTUALENV_VERSION=""
 
 MAINTAINER Mutlu Polatcan <mutlupolatcan@gmail.com>
 
@@ -17,10 +17,10 @@ ENV PYTHONPATH="${PYSPARK_VIRTUALENV}/bin/python3" \
 USER root
 RUN apt-get update && \
     apt-get -y install --no-install-recommends python3 python3-dev python3-pip && \
-    pip3 install virtualenv && \
+    pip3 install virtualenv==${VIRTUALENV_VERSION} && \
     mkdir -p ${PYSPARK_VIRTUALENV} && \
     virtualenv -p python3 ${PYSPARK_VIRTUALENV} && \
-    /bin/bash -c "source ${PYSPARK_VIRTUALENV}/bin/activate && echo $(which pip) && pip3 install pyspark~=${SPARK_VERSION%.*}.0 && deactivate" && \
+    spark_version=${SPARK_VERSION} && ${PYSPARK_VIRTUALENV}/bin/pip3 install pyspark~=${spark_version%.*}.0 && \
     chown -R hduser:hadoop ${PYSPARK_VIRTUALENV} && \
     rm -rf /var/lib/apt/lists/*
 
