virtualenv and pip fixes

--- a/src/utils/base_setup_generator/config.yaml
+++ b/src/utils/base_setup_generator/config.yaml
@@ -8,7 +8,7 @@ base_dockerfile_template: |
 
   ARG LIVY_VERSION=""
   ARG LIVY_ZIP_FOLDER_NAME="apache-livy-${{LIVY_VERSION}}-incubating-bin"
-  ARG LIVY_DOWNLOAD_LINK="https://www-eu.apache.org/dist/incubator/livy/${{LIVY_VERSION}}-incubating/${{LIVY_ZIP_FOLDER_NAME}}.zip"
+  ARG LIVY_DOWNLOAD_LINK="http://www-eu.apache.org/dist/incubator/livy/${{LIVY_VERSION}}-incubating/${{LIVY_ZIP_FOLDER_NAME}}.zip"
 
   ENV SPARK_HOME="${{HDUSER_HOME}}/spark" \
       LIVY_HOME="${{HDUSER_HOME}}/livy"
